# Minecraft_OpenGL

./: .gitattributes  .gitignore  CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Shader.cpp  Shader.h  main.cpp
src/camera/: Camera.cpp  Camera.h
src/engine/: Core.h  Window.cpp  Window.h
src/graphics/: Shader.cpp  Shader.h  TextureAtlas.cpp  TextureAtlas.h
src/renderer/: BlockRenderer.cpp  BlockRenderer.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  WorldRenderer.cpp  WorldRenderer.h
src/ui/: Crosshair.cpp  Crosshair.h
src/world/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  CubeData.h  World.cpp  World.h
src/world/helper/: FaceFlags.h  TextureAtlas.h
